--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <i class="fa-brands fa-app-store"></i>
+    <h1>Hello, World!</h1>
     <!-- Script -->
     <script src="Script.js"></script>
 </body>
